kubernetes/apps/servitor-apps/kagent/app/httproute.yaml
---
# yaml-language-server: $schema=https://soulwhisper.github.io/CRD-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kagent
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: si-modelcontextprotocol
    gethomepage.dev/name: kagent
    gethomepage.dev/group: Observability
spec:
  hostnames: ["agent.noirprime.com"]
  parentRefs:
    - name: kgateway-internal
      namespace: networking-system
  rules:
    - backendRefs:
        - name: kagent-controller
          namespace: servitor-apps
          port: 8080
